src/c-wgpu.zig

pub const WGPUInstanceBackend_Primary: WGPUInstanceBackend = @bitCast(@as(c_long, (((@as(c_int, 1) << @intCast(@as(c_int, 0))) | (@as(c_int, 1) << @intCast(@as(c_int, 2)))) | (@as(c_int, 1) << @intCast(@as(c_int, 3)))) | (@as(c_int, 1) << @intCast(@as(c_int, 5)))));
pub const WGPUInstanceBackend_Secondary: WGPUInstanceBackend = @bitCast(@as(c_long, @as(c_int, 1) << @intCast(@as(c_int, 1))));
pub const WGPUInstanceBackend_Force32: WGPUInstanceBackend = 2147483647;
pub const WGPUInstanceFlag = WGPUFlags;
pub const WGPUInstanceFlag_Empty: WGPUInstanceFlag = 0;
pub const WGPUInstanceFlag_Debug: WGPUInstanceFlag = @bitCast(@as(c_long, @as(c_int, 1) << @intCast(@as(c_int, 0))));
pub const WGPUInstanceFlag_Validation: WGPUInstanceFlag = @bitCast(@as(c_long, @as(c_int, 1) << @intCast(@as(c_int, 1))));
pub const WGPUInstanceFlag_DiscardHalLabels: WGPUInstanceFlag = @bitCast(@as(c_long, @as(c_int, 1) << @intCast(@as(c_int, 2))));
pub const WGPUInstanceFlag_AllowUnderlyingNoncompliantAdapter: WGPUInstanceFlag = @bitCast(@as(c_long, @as(c_int, 1) << @intCast(@as(c_int, 3))));
pub const WGPUInstanceFlag_GPUBasedValidation: WGPUInstanceFlag = @bitCast(@as(c_long, @as(c_int, 1) << @intCast(@as(c_int, 4))));
pub const WGPUInstanceFlag_ValidationIndirectCall: WGPUInstanceFlag = @bitCast(@as(c_long, @as(c_int, 1) << @intCast(@as(c_int, 5))));
pub const WGPUInstanceFlag_AutomaticTimestampNormalization: WGPUInstanceFlag = @bitCast(@as(c_long, @as(c_int, 1) << @intCast(@as(c_int, 6))));
pub const WGPUInstanceFlag_Default: WGPUInstanceFlag = @bitCast(@as(c_long, @as(c_int, 1) << @intCast(@as(c_int, 24))));
pub const WGPUInstanceFlag_Debugging: WGPUInstanceFlag = @bitCast(@as(c_long, @as(c_int, 1) << @intCast(@as(c_int, 25))));
pub const WGPUInstanceFlag_AdvancedDebugging: WGPUInstanceFlag = @bitCast(@as(c_long, @as(c_int, 1) << @intCast(@as(c_int, 26))));
pub const WGPUInstanceFlag_WithEnv: WGPUInstanceFlag = @bitCast(@as(c_long, @as(c_int, 1) << @intCast(@as(c_int, 27))));
pub const WGPUInstanceFlag_Force32: WGPUInstanceFlag = 2147483647;
pub const WGPUDx12Compiler_Undefined: c_int = 0;
pub const WGPUDx12Compiler_Fxc: c_int = 1;
pub const WGPUDx12Compiler_Dxc: c_int = 2;
pub const WGPUDx12Compiler_Force32: c_int = 2147483647;
pub const enum_WGPUDx12Compiler = c_uint;
pub const WGPUDx12Compiler = enum_WGPUDx12Compiler;
pub const WGPUGles3MinorVersion_Automatic: c_int = 0;
pub const WGPUGles3MinorVersion_Version0: c_int = 1;
pub const WGPUGles3MinorVersion_Version1: c_int = 2;
pub const WGPUGles3MinorVersion_Version2: c_int = 3;
pub const WGPUGles3MinorVersion_Force32: c_int = 2147483647;
pub const enum_WGPUGles3MinorVersion = c_uint;
pub const WGPUGles3MinorVersion = enum_WGPUGles3MinorVersion;
pub const WGPUPipelineStatisticName_VertexShaderInvocations: c_int = 0;
pub const WGPUPipelineStatisticName_ClipperInvocations: c_int = 1;
pub const WGPUPipelineStatisticName_ClipperPrimitivesOut: c_int = 2;
pub const WGPUPipelineStatisticName_FragmentShaderInvocations: c_int = 3;
pub const WGPUPipelineStatisticName_ComputeShaderInvocations: c_int = 4;
pub const WGPUPipelineStatisticName_Force32: c_int = 2147483647;
pub const enum_WGPUPipelineStatisticName = c_uint;
pub const WGPUPipelineStatisticName = enum_WGPUPipelineStatisticName;
pub const WGPUNativeQueryType_PipelineStatistics: c_int = 196608;
pub const WGPUNativeQueryType_Force32: c_int = 2147483647;
pub const enum_WGPUNativeQueryType = c_uint;
pub const WGPUNativeQueryType = enum_WGPUNativeQueryType;
pub const WGPUDxcMaxShaderModel_V6_0: c_int = 0;
pub const WGPUDxcMaxShaderModel_V6_1: c_int = 1;
pub const WGPUDxcMaxShaderModel_V6_2: c_int = 2;
pub const WGPUDxcMaxShaderModel_V6_3: c_int = 3;
pub const WGPUDxcMaxShaderModel_V6_4: c_int = 4;
pub const WGPUDxcMaxShaderModel_V6_5: c_int = 5;
pub const WGPUDxcMaxShaderModel_V6_6: c_int = 6;
pub const WGPUDxcMaxShaderModel_V6_7: c_int = 7;
pub const WGPUDxcMaxShaderModel_Force32: c_int = 2147483647;
pub const enum_WGPUDxcMaxShaderModel = c_uint;
pub const WGPUDxcMaxShaderModel = enum_WGPUDxcMaxShaderModel;
pub const WGPUGLFenceBehaviour_Normal: c_int = 0;
pub const WGPUGLFenceBehaviour_AutoFinish: c_int = 1;
pub const WGPUGLFenceBehaviour_Force32: c_int = 2147483647;
pub const enum_WGPUGLFenceBehaviour = c_uint;
pub const WGPUGLFenceBehaviour = enum_WGPUGLFenceBehaviour;
pub const WGPUDx12SwapchainKind_Undefined: c_int = 0;
pub const WGPUDx12SwapchainKind_DxgiFromHwnd: c_int = 1;
pub const WGPUDx12SwapchainKind_DxgiFromVisual: c_int = 2;
pub const WGPUDx12SwapchainKind_Force32: c_int = 2147483647;
pub const enum_WGPUDx12SwapchainKind = c_uint;
pub const WGPUDx12SwapchainKind = enum_WGPUDx12SwapchainKind;
pub const WGPUNativeDisplayHandleType_None: c_int = 0;
pub const WGPUNativeDisplayHandleType_Xlib: c_int = 1;
pub const WGPUNativeDisplayHandleType_Xcb: c_int = 2;
pub const WGPUNativeDisplayHandleType_Wayland: c_int = 3;
pub const WGPUNativeDisplayHandleType_Force32: c_int = 2147483647;
pub const enum_WGPUNativeDisplayHandleType = c_uint;
pub const WGPUNativeDisplayHandleType = enum_WGPUNativeDisplayHandleType;
pub const struct_WGPUXlibDisplayHandle = extern struct {
    display: ?*anyopaque = null,
    screen: c_int = 0,
};
pub const WGPUXlibDisplayHandle = struct_WGPUXlibDisplayHandle;
pub const struct_WGPUXcbDisplayHandle = extern struct {
    connection: ?*anyopaque = null,
    screen: c_int = 0,
};
pub const WGPUXcbDisplayHandle = struct_WGPUXcbDisplayHandle;
pub const struct_WGPUWaylandDisplayHandle = extern struct {
    display: ?*anyopaque = null,
};
pub const WGPUWaylandDisplayHandle = struct_WGPUWaylandDisplayHandle;
const union_unnamed_2 = extern union {
    xlib: WGPUXlibDisplayHandle,
    xcb: WGPUXcbDisplayHandle,
    wayland: WGPUWaylandDisplayHandle,
};
pub const struct_WGPUNativeDisplayHandle = extern struct {
    type: WGPUNativeDisplayHandleType = @import("std").mem.zeroes(WGPUNativeDisplayHandleType),
    data: union_unnamed_2 = @import("std").mem.zeroes(union_unnamed_2),
};
pub const WGPUNativeDisplayHandle = struct_WGPUNativeDisplayHandle;
pub const struct_WGPUInstanceExtras = extern struct {
    chain: WGPUChainedStruct = @import("std").mem.zeroes(WGPUChainedStruct),
    backends: WGPUInstanceBackend = 0,
    flags: WGPUInstanceFlag = 0,
    dx12ShaderCompiler: WGPUDx12Compiler = @import("std").mem.zeroes(WGPUDx12Compiler),
    gles3MinorVersion: WGPUGles3MinorVersion = @import("std").mem.zeroes(WGPUGles3MinorVersion),
    glFenceBehaviour: WGPUGLFenceBehaviour = @import("std").mem.zeroes(WGPUGLFenceBehaviour),
    dxcPath: WGPUStringView = @import("std").mem.zeroes(WGPUStringView),
    dxcMaxShaderModel: WGPUDxcMaxShaderModel = @import("std").mem.zeroes(WGPUDxcMaxShaderModel),
    dx12PresentationSystem: WGPUDx12SwapchainKind = @import("std").mem.zeroes(WGPUDx12SwapchainKind),
    budgetForDeviceCreation: [*c]const u8 = null,
    budgetForDeviceLoss: [*c]const u8 = null,
    displayHandle: WGPUNativeDisplayHandle = @import("std").mem.zeroes(WGPUNativeDisplayHandle),
};
pub const WGPUInstanceExtras = struct_WGPUInstanceExtras;
pub const struct_WGPUDeviceExtras = extern struct {
    chain: WGPUChainedStruct = @import("std").mem.zeroes(WGPUChainedStruct),
    tracePath: WGPUStringView = @import("std").mem.zeroes(WGPUStringView),
};
pub const WGPUDeviceExtras = struct_WGPUDeviceExtras;
pub const struct_WGPUNativeLimits = extern struct {
    chain: WGPUChainedStruct = @import("std").mem.zeroes(WGPUChainedStruct),
    maxNonSamplerBindings: u32 = 0,
    maxBindingArrayElementsPerShaderStage: u32 = 0,
    maxBindingArraySamplerElementsPerShaderStage: u32 = 0,
    maxMultiviewViewCount: u32 = 0,
};
pub const WGPUNativeLimits = struct_WGPUNativeLimits;
pub const struct_WGPUPipelineLayoutExtras = extern struct {
    chain: WGPUChainedStruct = @import("std").mem.zeroes(WGPUChainedStruct),
    immediateDataSize: u32 = 0,
};
pub const WGPUPipelineLayoutExtras = struct_WGPUPipelineLayoutExtras;
pub const WGPUSubmissionIndex = u64;
pub const struct_WGPUShaderDefine = extern struct {
    name: WGPUStringView = @import("std").mem.zeroes(WGPUStringView),
    value: WGPUStringView = @import("std").mem.zeroes(WGPUStringView),
};
pub const WGPUShaderDefine = struct_WGPUShaderDefine;
pub const struct_WGPUShaderSourceGLSL = extern struct {
    chain: WGPUChainedStruct = @import("std").mem.zeroes(WGPUChainedStruct),
    stage: WGPUShaderStage = 0,
    code: WGPUStringView = @import("std").mem.zeroes(WGPUStringView),
    defineCount: u32 = 0,
    defines: [*c]const WGPUShaderDefine = null,
};
pub const WGPUShaderSourceGLSL = struct_WGPUShaderSourceGLSL;
pub const struct_WGPUShaderModuleDescriptorSpirV = extern struct {
    label: WGPUStringView = @import("std").mem.zeroes(WGPUStringView),
    sourceSize: u32 = 0,
    source: [*c]const u32 = null,
};
pub const WGPUShaderModuleDescriptorSpirV = struct_WGPUShaderModuleDescriptorSpirV;
pub const struct_WGPURegistryReport = extern struct {
    numAllocated: usize = 0,
    numKeptFromUser: usize = 0,
    numReleasedFromUser: usize = 0,
    elementSize: usize = 0,
};
pub const WGPURegistryReport = struct_WGPURegistryReport;
pub const struct_WGPUHubReport = extern struct {
    adapters: WGPURegistryReport = @import("std").mem.zeroes(WGPURegistryReport),
    devices: WGPURegistryReport = @import("std").mem.zeroes(WGPURegistryReport),
    queues: WGPURegistryReport = @import("std").mem.zeroes(WGPURegistryReport),
    pipelineLayouts: WGPURegistryReport = @import("std").mem.zeroes(WGPURegistryReport),
    shaderModules: WGPURegistryReport = @import("std").mem.zeroes(WGPURegistryReport),
    bindGroupLayouts: WGPURegistryReport = @import("std").mem.zeroes(WGPURegistryReport),
    bindGroups: WGPURegistryReport = @import("std").mem.zeroes(WGPURegistryReport),
    commandBuffers: WGPURegistryReport = @import("std").mem.zeroes(WGPURegistryReport),
    renderBundles: WGPURegistryReport = @import("std").mem.zeroes(WGPURegistryReport),
    renderPipelines: WGPURegistryReport = @import("std").mem.zeroes(WGPURegistryReport),
    computePipelines: WGPURegistryReport = @import("std").mem.zeroes(WGPURegistryReport),
    pipelineCaches: WGPURegistryReport = @import("std").mem.zeroes(WGPURegistryReport),
    querySets: WGPURegistryReport = @import("std").mem.zeroes(WGPURegistryReport),
    buffers: WGPURegistryReport = @import("std").mem.zeroes(WGPURegistryReport),
    textures: WGPURegistryReport = @import("std").mem.zeroes(WGPURegistryReport),
    textureViews: WGPURegistryReport = @import("std").mem.zeroes(WGPURegistryReport),
    samplers: WGPURegistryReport = @import("std").mem.zeroes(WGPURegistryReport),
};
pub const WGPUHubReport = struct_WGPUHubReport;
pub const struct_WGPUGlobalReport = extern struct {
    surfaces: WGPURegistryReport = @import("std").mem.zeroes(WGPURegistryReport),
    hub: WGPUHubReport = @import("std").mem.zeroes(WGPUHubReport),
};
pub const WGPUGlobalReport = struct_WGPUGlobalReport;
pub const struct_WGPUInstanceEnumerateAdapterOptions = extern struct {
    nextInChain: [*c]const WGPUChainedStruct = null,
    backends: WGPUInstanceBackend = 0,
};
pub const WGPUInstanceEnumerateAdapterOptions = struct_WGPUInstanceEnumerateAdapterOptions;
pub const struct_WGPUBindGroupEntryExtras = extern struct {
    chain: WGPUChainedStruct = @import("std").mem.zeroes(WGPUChainedStruct),
    buffers: [*c]const WGPUBuffer = null,
    bufferCount: usize = 0,
    samplers: [*c]const WGPUSampler = null,
    samplerCount: usize = 0,
    textureViews: [*c]const WGPUTextureView = null,
    textureViewCount: usize = 0,
};
pub const WGPUBindGroupEntryExtras = struct_WGPUBindGroupEntryExtras;
pub const struct_WGPUBindGroupLayoutEntryExtras = extern struct {
    chain: WGPUChainedStruct = @import("std").mem.zeroes(WGPUChainedStruct),
    count: u32 = 0,
};
pub const WGPUBindGroupLayoutEntryExtras = struct_WGPUBindGroupLayoutEntryExtras;
